--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
 </body>
-
+<!-- "homepage": "https://yashm13114.github.io/yash", -->
+<!-- "predeploy": "npm run build", -->
+<!-- "deploy": "gh-pages -d build", -->
 </html>
